# CLI_tool_to_control_EC2

./: README.md  pyproject.toml  requirements.txt
CLI_tool_to_control EC2/: main.py
CLI_tool_to_control_EC2/: main.py
cli_tool_to_control_ec2/: main.py
test_main/: test_unittest_main.py
tests/: test_ec2_service.py
