[tool.poetry]
name = "click"
version = "8.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

boto3 = "^1.18.3"
botocore = "^1.29.84"
sys = "^"
logging = "^"
